# PARA

./: .gitmodules  pyproject.toml
src/istari/: __init__.py
