[project]
name = "istari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Armstrong", email = "patrick.james.1998@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
istari = "istari:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
